# consumersresources

./: .gitignore  1  CMakeLists.txt  README.md  another_cool_model.npy  clean_logs_and_data  compute_delta_critical_otherseed  compute_delta_critical_test  configuration*  configure  critical_delta_all_metaparams  data_output_14-Jun_strstab.bzip2  eigenvalue_single_resource.py  eigenvalues_arbitrary.py  example.py  nohup.out  numerical_analysis.aux  numerical_analysis.run.xml  process-palette.json  requirements.txt  run_commands
additional_scripts/: add_string_to_file.py  analyze_matrix_properties.py  combine_files.py  convert_matrices_to_long_representation.py  create_full_rank_matrices.py  create_fully_connected_matrices.py  create_structural_stability_file.py  generate_additional_structural_stability_commands.py  generate_structural_stability_configs.py  jordan_form.py  list_matrices.py  move_optimized_matrices  optimize_alpha_matrix.py  plot_alpha_allowed.py  rename_matrices.py  replace_lines_in_config_files  run_commands_on_x_cores.py  run_comparison_metaparams.py  run_feasability_constraints.py  run_structural_stability_computations.py  separate_file.py  test_J0_cofactor.nb  transform_matrix_in_list_representation.py  transpose_matrices.py  write_full_rank_matrices.py
commands/: additional_feas_dyn_computations.txt  additional_largest_eigenvalue_computations.txt  additional_struct_stab_computations.txt  feasibility_NR25_NS25_opt_mat.txt  feasibility_dynamical_stability_computations.txt  feasibility_dynamical_stability_computations_modified_LRI.txt  find_dominant_eigenvalue.txt  local_dynamical_stability_NR25_NS25_opt_mat.txt  optimize_matrices.txt  optimize_matrices_Alberto.txt  optimize_matrices_Leo.txt  optimize_matrices_bm.txt  optimize_matrices_both_g1_a1.txt  optimize_matrices_run_2.txt  struct_stab_computations_modified_perturbation.txt  study_all_NR25_NS25.txt  study_all_NR25_NS25_test.txt  study_dyn_stab_NR25_NS25.txt  study_eff_comp_NR25_NS25.txt  study_systems.txt  study_systems_NR25_NS25.txt  study_systems_NR25_NS25_binary_metamatrix.txt  study_systems_NR25_NS25_optmatalpha01.txt  study_test_no_syntrophy.txt  test.txt  test_feasibility.txt  test_feasibility_dynamical_stability_computations.txt
config/: add_lines_to_config_files  alpha_list.in  configuration.in  configuration_comparison.in  configuration_comparison_NR25_NS25.in  configuration_comparison_NR25_NS25_s025_a0.in  configuration_comparison_NR25_NS25_s025_a05.in  configuration_comparison_NR25_NS25_s025_a1.in  configuration_comparison_NR25_NS25_s025_a15.in  configuration_equamagjac.in  (+42 more)
(+18955 files in other folders)
